# syber

./: .gitignore  Cargo.toml  README.md  update_vendor.ps1  update_vendor.sh
.cargo/: config.toml
.github/workflows/: release.yml
crates/syber-client/: Cargo.toml
crates/syber-client/src/: app.rs  main.rs  session.rs
crates/syber-client/src/decode/: mod.rs
crates/syber-client/src/input/: mod.rs
crates/syber-common/: Cargo.toml
crates/syber-common/src/: config.rs  lib.rs
crates/syber-server/: Cargo.toml
crates/syber-server/src/: app.rs  cert.rs  main.rs  session.rs
crates/syber-server/src/capture/: mod.rs
crates/syber-server/src/encode/: mod.rs
crates/syber-server/src/input/: mod.rs
docs/: 01-kyber-overview.md  README.md  syber-project-plan.md
docs/architecture/: README.md  authentication.md  client.md  server.md
docs/components/: README.md  kyctl.md  kymedia.md  kymux.md  kynput.md  kyutil.md
docs/network/: quic.md
docs/platform/: compatibility.md
docs/sdk/: README.md
