[workspace]
resolver = "2"
members = [
    "crates/syber-common",
    "crates/syber-server",
    "crates/syber-client",
]

[workspace.dependencies]
# ── Kyber core (via .cargo/config.toml patches) ──────────────────────────
kyproto     = { version = "0.1.0", features = ["kynet-quinn", "tokio-rt"] }
kymux-types = { version = "0.1.0" }
kynput      = { version = "0.1.0" }
kycom       = { version = "0.1.0" }

# ── Async ─────────────────────────────────────────────────────────────────
tokio = { version = "1.47", features = ["full"] }

# ── UI ───────────────────────────────────────────────────────────────────
egui         = "0.29"
eframe       = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras  = "0.29"

# ── Video ─────────────────────────────────────────────────────────────────
xcap        = "0.0.14"
openh264    = "0.6"

# ── Crypto / TLS certs ───────────────────────────────────────────────────
rcgen = "0.13"
ring  = "0.17"
rustls = { version = "=0.23.31", default-features = false, features = ["logging", "std", "tls12"] }

# ── Serialization ─────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utils ─────────────────────────────────────────────────────────────────
anyhow         = "1"
thiserror      = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes          = "1"
hex            = "0.4"
rand             = "0.8"
rustls-pemfile   = "2.1"
dirs           = "5"
log            = "0.4"
