[package]
name    = "syber-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
dirs       = { workspace = true }
anyhow     = { workspace = true }
rand       = { workspace = true }
rustls-pemfile = { workspace = true }
hex        = { workspace = true }
